build/log/idf_py_stdout_output_85350
Command: ninja all
[1/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: [code=1] esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/home/salah/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20251107/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5.2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/salah/projects/embedded/cazio/build/config -I/home/salah/projects/embedded/cazio/main -I/home/salah/esp/esp-idf/components/newlib/platform_include -I/home/salah/esp/esp-idf/components/freertos/config/include -I/home/salah/esp/esp-idf/components/freertos/config/include/freertos -I/home/salah/esp/esp-idf/components/freertos/config/xtensa/include -I/home/salah/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/salah/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/salah/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/salah/esp/esp-idf/components/freertos/esp_additions/include -I/home/salah/esp/esp-idf/components/esp_hw_support/include -I/home/salah/esp/esp-idf/components/esp_hw_support/include/soc -I/home/salah/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/salah/esp/esp-idf/components/esp_hw_support/dma/include -I/home/salah/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/salah/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/salah/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/salah/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/salah/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/salah/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/salah/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/salah/esp/esp-idf/components/heap/include -I/home/salah/esp/esp-idf/components/heap/tlsf -I/home/salah/esp/esp-idf/components/log/include -I/home/salah/esp/esp-idf/components/soc/include -I/home/salah/esp/esp-idf/components/soc/esp32 -I/home/salah/esp/esp-idf/components/soc/esp32/include -I/home/salah/esp/esp-idf/components/soc/esp32/register -I/home/salah/esp/esp-idf/components/hal/platform_port/include -I/home/salah/esp/esp-idf/components/hal/esp32/include -I/home/salah/esp/esp-idf/components/hal/include -I/home/salah/esp/esp-idf/components/esp_rom/include -I/home/salah/esp/esp-idf/components/esp_rom/esp32/include -I/home/salah/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/salah/esp/esp-idf/components/esp_rom/esp32 -I/home/salah/esp/esp-idf/components/esp_common/include -I/home/salah/esp/esp-idf/components/esp_system/include -I/home/salah/esp/esp-idf/components/esp_system/port/soc -I/home/salah/esp/esp-idf/components/esp_system/port/include/private -I/home/salah/esp/esp-idf/components/xtensa/esp32/include -I/home/salah/esp/esp-idf/components/xtensa/include -I/home/salah/esp/esp-idf/components/xtensa/deprecated_include -I/home/salah/esp/esp-idf/components/lwip/include -I/home/salah/esp/esp-idf/components/lwip/include/apps -I/home/salah/esp/esp-idf/components/lwip/include/apps/sntp -I/home/salah/esp/esp-idf/components/lwip/lwip/src/include -I/home/salah/esp/esp-idf/components/lwip/port/include -I/home/salah/esp/esp-idf/components/lwip/port/freertos/include -I/home/salah/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/salah/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/salah/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/salah/esp/esp-idf/components/esp_driver_i2c/include -I/home/salah/esp/esp-idf/components/esp_driver_gpio/include -I/home/salah/esp/esp-idf/components/esp_driver_gptimer/include -I/home/salah/esp/esp-idf/components/esp_pm/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/salah/projects/embedded/cazio=. -fmacro-prefix-map=/home/salah/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /home/salah/projects/embedded/cazio/main/main.c
/home/salah/projects/embedded/cazio/main/main.c: In function 'handle_input':
/home/salah/projects/embedded/cazio/main/main.c:193:34: error: expected ';' before '}' token
  193 |     vTaskDelay(pdMS_TO_TICKS(10))
      |                                  ^
      |                                  ;
  194 |   }
      |   ~                               
[2/9] Performing build step for 'bootloader'
[1/1] cd /home/salah/projects/embedded/cazio/build/bootloader/esp-idf/esptool_py && /home/salah/.espressif/python_env/idf5.5_py3.13_env/bin/python /home/salah/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/salah/projects/embedded/cazio/build/bootloader/bootloader.bin
Bootloader binary size 0x66c0 bytes. 0x940 bytes (8%) free.
ninja: build stopped: subcommand failed.
